netlify form styling margin

--- a/inquiry.html
+++ b/inquiry.html
@@ -191,7 +191,7 @@
     </div>
 
     <!-- reCAPTCHA appears here -->
-    <div data-netlify-recaptcha="true"></div>
+    <div data-netlify-recaptcha="true" style="margin-top: 2rem;"></div>
 
     <button type="submit" class="navbar__inquiry2">
       Send Inquiry
