form margin edit

--- a/inquiry.html
+++ b/inquiry.html
@@ -185,7 +185,7 @@
       </label>
     </div>
 
-    <div class="input-group">
+    <div class="input-group" style="margin-bottom: 2rem;">
       <label for="websiteUrl" class="input-name">Current Website URL (if exists)</label>
       <input type="url" id="websiteUrl" name="websiteUrl" placeholder="https://example.com">
     </div>
