dots fixed smaller screens

--- a/services.html
+++ b/services.html
@@ -458,11 +458,11 @@ mobile and desktop app development, and brand visual identity.</p>
   @media (max-width: 768px) {
     .dot {
   position: absolute;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background-color: white;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0.8);
   transition: background-color 0.3s ease;
   
 }
@@ -471,8 +471,8 @@ mobile and desktop app development, and brand visual identity.</p>
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80vmin;
-  height: 80vmin;
+  width: 78vmin;
+  height: 78vmin;
   z-index: 10;
   pointer-events: none;
   opacity: 0; /* ✅ hide initially */
