--- a/services.html
+++ b/services.html
@@ -163,7 +163,7 @@
       left: 4rem;
       width: 600px;
       font-size: 1.8rem;
-      color: #ccc;
+      color: #e3e3e3;
       line-height: 1.6;
       opacity: 0;
       pointer-events: none;
@@ -171,11 +171,11 @@
     }
    .circle-title {
    position: absolute;
-  top: 4rem;
+  top: 6rem;
   right: 4rem;
   max-width: 600px;
   font-size: 4rem;
-  color: #ccc;
+  color: #e9e9e9;
   line-height: 1.3;
   opacity: 1;
   pointer-events: none;
