text change iqnuiry custom app

--- a/inquiry.html
+++ b/inquiry.html
@@ -173,7 +173,7 @@
       </label>
       <label class="radio-option">
         <input type="checkbox" name="projectScope[]" value="Videography">
-        Videography
+        Custom App
       </label>
     </div>
 
