--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Design Lab in Houston, TX</title>
+  <title>Design Lab in Houston, TX | MCVDesign</title>
+  <link rel="icon" type="image/png" href="images/favicon.jpg"/>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
