--- a/inquiry.html
+++ b/inquiry.html
@@ -153,7 +153,7 @@
 
     <div class="input-group">
       <label for="projectDescription" class="input-name">Short description</label>
-      <input type="text" id="projectDescription" name="projectDescription" placeholder="Desktop and Mobile App" required>
+      <input type="text" id="projectDescription" name="projectDescription" placeholder="I need a custom website for my business.." required>
     </div>
 
     <label class="input-name">Project Scope (design + development)</label>
