email button change

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       </ul>
 -->
       <div class="navbar__right">
-        <button class="navbar__email">
-          hello@mcvdesign.com
-        </button>
+        <a href="mailto:christian@mcvdesign.com" class="navbar__email">
+  christian@mcvdesign.com
+</a>
         <a href="inquiry.html">
         <button class="navbar__inquiry">
           Send Inquiry
