--- a/inquiry.html
+++ b/inquiry.html
@@ -40,7 +40,7 @@
 <div class="navbar__right">
     <div class="dropdown-email">
         <button class="navbar__email">
-          hello@mcvdesign.com
+          christian@mcvdesign.com
         </button>
       </div>
 
