--- a/services.html
+++ b/services.html
@@ -312,7 +312,7 @@
 -->
       <div class="navbar__right">
         <button class="navbar__email">
-          hello@mcvdesign.com
+          christian@mcvdesign.com
         </button>
         <a href="inquiry.html">
         <button class="navbar__inquiry">
