--- a/inquiry.html
+++ b/inquiry.html
@@ -39,9 +39,9 @@
     <div class="navbar__container">
 <div class="navbar__right">
     <div class="dropdown-email">
-        <button class="navbar__email">
-          christian@mcvdesign.com
-        </button>
+       <a href="mailto:christian@mcvdesign.com" class="navbar__email">
+  christian@mcvdesign.com
+</a>
       </div>
 
     <div class="navbar__contact"><span></span></div>
@@ -80,9 +80,9 @@
 
 
     <div class="dropdown-email">
-        <button class="navbar__email">
-          hello@mcvdesign.com
-        </button>
+        <a href="mailto:christian@mcvdesign.com" class="navbar__email">
+  christian@mcvdesign.com
+</a>
       </div>
 
     <div class="inquiry-container">
