email fix services.html

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 
 
   <div class="dropdown-email">
-        <button class="navbar__email">
-          hello@mcvdesign.com
-        </button>
+        <a href="mailto:christian@mcvdesign.com" class="navbar__email">
+  christian@mcvdesign.com
+</a>
       </div>
   
   <div class="dropdown-copyright"><h2>Copyright © 2025</h2></div>
