title and meta tags

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Design Lab in Houston, TX | MCVDesign</title>
+  <title>Web Design & Creative Studio in Houston, TX | MCVDesign</title>
+  <meta name="description" content="A Houston design studio offering web design, branding, graphics, and marketing visuals. MCVDesign helps businesses stand out online.">
   <link rel="icon" type="image/png" href="images/favicon.jpg"/>
 
   <!-- Fonts -->
