--- a/inquiry.html
+++ b/inquiry.html
@@ -11,9 +11,11 @@
     gtag('config', 'G-GJ18RLBWPT');
   </script>
   
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inquiry</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Project Inquiry | MCVDesign – Houston Web Design & Creative Studio</title>
+  <meta name="description" content="Ready to begin? Send your project inquiry to MCVDesign. Let’s bring your website, branding, or visuals to life.">
+  <link rel="icon" type="image/png" href="images/favicon.jpg"/>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
