--- a/services.html
+++ b/services.html
@@ -11,8 +11,12 @@
     gtag('config', 'G-GJ18RLBWPT');
   </script>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Our Services</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Services | MCVDesign – Houston Web Design & Creative Studio</title>
+  <meta name="description" content="Explore MCVDesign services, including web design, branding, graphics, and digital content for businesses in Houston and beyond.">
+  <link rel="icon" type="image/png" href="images/favicon.jpg"/>
+
+
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"/>
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
