--- a/work.html
+++ b/work.html
@@ -10,9 +10,11 @@
 
     gtag('config', 'G-GJ18RLBWPT');
   </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Work</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Our Work | MCVDesign – Houston Web Design & Creative Studio</title>
+    <meta name="description" content="See the latest web design, branding, and digital work created by MCVDesign. A showcase of clean, modern visuals for Houston businesses.">
+    <link rel="icon" type="image/png" href="images/favicon.jpg"/>
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
