email sig christian

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web Design & Creative Studio in Houston, TX | MCVDesign</title>
-  <meta name="description" content="A Houston design studio offering web design, branding, graphics, and marketing visuals. MCVDesign helps businesses stand out online.">
+  <title>Houston Web Designer | Custom Websites & Branding | MCVDesign</title>
+  <meta name="description" content="Houston web designer offering custom websites, branding, and full digital design. MCVDesign builds high-performance websites for small businesses, startups, and service companies in Houston, TX. Get a modern site that converts.">
   <link rel="icon" type="image/png" href="images/favicon.jpg"/>
 
   <!-- Fonts -->
