mobile update with homepage visual update

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
         </div>
 
-        <div class="large-text2"><p>We are a Design Lab. <br>— Based in Houston, TX</p></div>
+        <!--<div class="large-text2"><p>We are a Design Lab. <br>— Based in Houston, TX</p></div>-->
 
         <a href="inquiry.html">
         <button class="button-design2">
@@ -236,6 +236,28 @@
     opacity 0.35s ease,
     transform 0.35s ease,
     filter 0.35s ease;
+}
+
+@media (max-width: 768px) {
+.hero-animated {
+  margin-top: 0rem;
+  font-size: clamp(5rem, 5vw, 5rem);
+
+}
+
+.swap {
+  display: inline-flex;
+}
+
+/* EACH LETTER */
+.swap span {
+ 
+
+  /* ✅ OUTLINE */
+  -webkit-text-stroke: 1px #54f3a4;
+
+
+
 }
   </style>
 
