continuation previous update

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 @media (max-width: 768px) {
 .hero-animated {
   margin-top: 0rem;
-  font-size: clamp(5rem, 5vw, 5rem);
+  font-size: clamp(5rem, 5vw, 5em);
 
 }
 
@@ -256,7 +256,7 @@
   /* ✅ OUTLINE */
   -webkit-text-stroke: 1px #54f3a4;
 
-
+}
 
 }
   </style>
