--- a/services.html
+++ b/services.html
@@ -346,7 +346,7 @@
 <div class="dropdown-menu" id="navDropdown">
    <div class="dropdown-video-bg">
     <video autoplay muted loop playsinline>
-      <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//sphere6.mp4" type="video/mp4" />
+      <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/donut9.mp4" type="video/mp4" />
     </video>
   </div>
 
@@ -362,7 +362,7 @@
 
   <div class="dropdown-email">
         <button class="navbar__email">
-          hello@mcvdesign.com
+          christian@mcvdesign.com
         </button>
       </div>
   
