--- a/services.html
+++ b/services.html
@@ -138,7 +138,7 @@
 
     .progress-ring {
   stroke: #54f3a4;
-  filter: drop-shadow(0 0 8px rgba(84, 243, 164, var(--glow, 1)));
+  filter: drop-shadow(0 0 8px rgba(84, 243, 164, var(--glow, 0.2)));
   transition: filter 0.3s ease;
   
 }
@@ -802,7 +802,7 @@ ScrollTrigger.create({
   anticipatePin: 1,
   onEnter: () => {
     gsap.to(ring, {
-      '--glow': 1,
+      '--glow': 0.2,
       duration: 0.6,
       ease: 'power2.out',
       onUpdate: () => {
@@ -812,7 +812,7 @@ ScrollTrigger.create({
   },
   onLeave: () => {
     gsap.to(ring, {
-      '--glow': 1,
+      '--glow': 0.3,
       duration: 0.6,
       ease: 'power2.out',
       onUpdate: () => {
@@ -822,7 +822,7 @@ ScrollTrigger.create({
   },
   onEnterBack: () => {
     gsap.to(ring, {
-      '--glow': 1,
+      '--glow': 0.4,
       duration: 0.6,
       ease: 'power2.out',
       onUpdate: () => {
@@ -832,7 +832,7 @@ ScrollTrigger.create({
   },
   onLeaveBack: () => {
     gsap.to(ring, {
-      '--glow': 1,
+      '--glow': 0.5,
       duration: 0.6,
       ease: 'power2.out',
       onUpdate: () => {
@@ -885,6 +885,525 @@ ScrollTrigger.create({
 
 
 </script>
+
+
+
+
+
+<section class="design-section" id="design">
+  <div class="design-wrap">
+
+    <!-- LEFT -->
+    <div class="design-left">
+      <h2 class="design-title">Design</h2>
+      <p class="design-sub">
+        Design is how your product communicates trust — through clarity, consistency, and details that feel intentional.
+      </p>
+
+      <!-- Image placeholder (replace with <img> later) -->
+      <div class="design-image">
+        <div class="design-image">
+          <img src="/images/stock5.jpg" alt="Design work example" loading="lazy">
+        </div>
+      </div>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="design-right">
+      <div class="design-accordion" id="designAccordion">
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Logos</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Simple, memorable marks built to work everywhere — web, print, signage, and small sizes.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Branding</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Color, typography, voice, and layout systems that keep your brand consistent across every touchpoint.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Websites</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Modern, fast sites that are easy to navigate — built for conversions, SEO, and smooth UX.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>UX / UI</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Wireframes to polished interfaces — focused on usability, hierarchy, and flow that feels effortless.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Motion</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Micro-interactions and animated storytelling that make your brand feel alive without being distracting.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Development</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Clean, scalable builds — from landing pages to custom components that perform on every device.</p>
+          </div>
+        </button>
+
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<section class="design-section" id="design">
+  <div class="design-wrap">
+
+    <!-- LEFT -->
+    <div class="design-left">
+      <h2 class="design-title">Development</h2>
+      <p class="design-sub">
+         Clean, scalable builds that load fast, feel premium, and stay easy to maintain as you grow.
+      </p>
+
+      <!-- Image placeholder (replace with <img> later) -->
+      <div class="design-image">
+         <div class="design-image">
+          <img src="/images/stock4.jpg" alt="Design work example" loading="lazy">
+        </div>
+      </div>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="design-right">
+      <div class="design-accordion" id="designAccordion">
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Frontend</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Pixel-perfect UI with smooth interactions, responsiveness, and accessibility baked in.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Backend</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>APIs, databases, and logic that stay reliable under real traffic and real business needs.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Performance</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Speed audits + optimization so your site feels instant and scores better on Core Web Vitals.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>CMS / Headless</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Structured content that’s easy for your team to edit without breaking layouts.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Integrations</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Payments, booking, CRM, email, analytics — connected cleanly and securely.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Launch & QA</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Cross-device testing, SEO checks, tracking, and deployment without surprises.</p>
+          </div>
+        </button>
+
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+<section class="design-section" id="design">
+  <div class="design-wrap">
+
+    <!-- LEFT -->
+    <div class="design-left">
+      <h2 class="design-title">Growth</h2>
+      <p class="design-sub">
+        Turn a good site into a lead engine with SEO, conversion strategy, and consistent iteration.
+      </p>
+
+      <!-- Image placeholder (replace with <img> later) -->
+      <div class="design-image">
+        <div class="design-image">
+          <img src="/images/stock3.jpg" alt="Growth strategy example" loading="lazy">
+        </div>
+      </div>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="design-right">
+      <div class="design-accordion" id="designAccordion">
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>SEO</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Technical + on-page + content strategy that improves rankings and drives qualified traffic.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Conversion</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Stronger CTAs, layout hierarchy, and trust signals that increase inquiries and bookings.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Analytics</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>GA4 + events + funnels so you know what’s working (and what to improve next).</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Content</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Landing pages and service content that match real search intent and answer buyer questions.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Paid Media</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Targeted campaigns that complement SEO — focused on quality leads, not vanity clicks.</p>
+          </div>
+        </button>
+
+        <button class="acc-item" type="button" aria-expanded="false">
+          <div class="acc-head">
+            <h3>Iteration</h3>
+            <span class="acc-plus" aria-hidden="true"></span>
+          </div>
+          <div class="acc-body">
+            <p>Monthly improvements based on data: copy, offers, speed, UX, and conversion paths.</p>
+          </div>
+        </button>
+
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<style>
+.design-section{
+  background:#000;
+  color:#fff;
+  height: auto;
+  display:flex;
+  align-items:flex-start;   /* ✅ was center */
+  justify-content:center;
+  padding: 8rem 4rem;
+}
+
+.design-wrap{
+  width: 100vw;
+  display:grid;
+  grid-template-columns: 1.05fr 0.95fr;
+  gap: 6rem;
+  align-items:start;
+}
+
+.design-title{
+  font-size: clamp(3rem, 6vw, 6rem);
+  font-weight: 400;
+  margin: 0 0 1rem 0;
+}
+
+.design-sub{
+  font-size: clamp(1.2rem, 2vw, 1.8rem);
+  line-height: 1.6;
+  color:#e6e6e6;
+  max-width: 52ch;
+  margin: 0 0 2.5rem 0;
+}
+
+.design-image{
+  width: 100%;
+  height: 420px;
+  border-radius: 22px;
+  border: 1px solid rgba(255,255,255,0.14);
+  background: rgba(255,255,255,0.03);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  overflow:hidden;
+  position: relative;
+}
+.design-image span{
+  opacity: 0.65;
+  font-size: 1rem;
+  letter-spacing: 0.04em;
+}
+.design-image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+  scale: 1.1;
+}
+/* Accordion */
+.design-accordion{
+  display:flex;
+  flex-direction:column;
+  gap: 1rem;
+}
+
+.acc-item {
+  width: 100%;
+  text-align: left;
+  background: transparent;
+  color: #fff;
+  cursor: pointer;
+  padding: 3rem 0;          /* vertical rhythm */
+  border: none;
+  border-bottom: 1px solid rgba(255,255,255,0.14);
+  border-radius: 0;
+}
+.acc-item:first-child {
+  border-top: 1px solid rgba(255,255,255,0.14);
+}
+.acc-head{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap: 1rem;
+}
+
+.acc-head h3{
+  margin:0;
+  font-size: 2rem;
+  font-weight: 400;
+    color: #54f3a4;
+  transition: color 0.3s ease;
+}
+.acc-plus::before,
+.acc-plus::after {
+  background: #54f3a4;
+  transition: background 0.3s ease, transform 0.25s ease;
+}
+/* Open state */
+.acc-item.is-open .acc-head h3 {
+  color: #ffffff;
+}
+
+.acc-item.is-open .acc-plus::before,
+.acc-item.is-open .acc-plus::after {
+  background: #ffffff;
+}
+/* plus icon */
+.acc-plus{
+  width: 22px;
+  height: 22px;
+  position: relative;
+  flex: 0 0 22px;
+  opacity: 0.9;
+}
+.acc-plus::before,
+.acc-plus::after{
+  content:"";
+  position:absolute;
+  top:50%;
+  left:50%;
+  width: 18px;
+  height: 2px;
+  background:#fff;
+  transform: translate(-50%,-50%);
+  border-radius: 2px;
+}
+.acc-plus::after{
+  transform: translate(-50%,-50%) rotate(90deg);
+  transition: transform 0.25s ease;
+}
+
+.acc-body{
+  overflow: hidden;
+}
+.acc-body p{
+  margin: 3rem 0 0 0;
+  color:#a6a6a6;
+  line-height: 1.6;
+  font-size: 1.3rem;
+}
+
+/* open state */
+.acc-item.is-open .acc-body{
+  max-height: 240px; /* enough for a couple lines */
+}
+.acc-item.is-open .acc-plus::after{
+  transform: translate(-50%,-50%) rotate(0deg);
+}
+
+/* mobile */
+@media (max-width: 900px){
+  .design-section{ padding: 6rem 1.5rem; }
+  .design-wrap{ grid-template-columns: 1fr; gap: 2.5rem; }
+  .design-image{ height: 320px; }
+}
+</style>
+<script>
+  // no need to registerPlugin() for basic tweens
+  const items = document.querySelectorAll("#designAccordion .acc-item");
+
+  let activeItem = null;
+
+  // ---- setup: close all bodies first ----
+  items.forEach((item) => {
+    const body = item.querySelector(".acc-body");
+    gsap.set(body, { height: 0, opacity: 0, overflow: "hidden" });
+    item.classList.remove("is-open");
+    item.setAttribute("aria-expanded", "false");
+  });
+
+  // ---- helpers ----
+  function openItem(item, { instant = false } = {}) {
+    const body = item.querySelector(".acc-body");
+
+    item.classList.add("is-open");
+    item.setAttribute("aria-expanded", "true");
+
+    gsap.killTweensOf(body);
+
+    // smoother feel: slightly longer + softer ease
+    gsap.to(body, {
+      height: "auto",
+      opacity: 1,
+      duration: instant ? 0 : 0.6,
+      ease: "power4.out"
+    });
+  }
+
+  function closeItem(item) {
+    const body = item.querySelector(".acc-body");
+
+    item.classList.remove("is-open");
+    item.setAttribute("aria-expanded", "false");
+
+    gsap.killTweensOf(body);
+
+    gsap.to(body, {
+      height: 0,
+      opacity: 0,
+      duration: 0.45,
+      ease: "power4.inOut"
+    });
+  }
+
+  // ---- click behavior: open + close at the same time ----
+  items.forEach((item) => {
+    item.addEventListener("click", () => {
+      if (item === activeItem) {
+        closeItem(item);
+        activeItem = null;
+        return;
+      }
+
+      // open new + close old simultaneously
+      openItem(item);
+      if (activeItem) closeItem(activeItem);
+
+      activeItem = item;
+    });
+  });
+
+  // ---- first open by default (instant, no animation on load) ----
+  if (items.length) {
+    activeItem = items[0];
+    openItem(activeItem, { instant: true });
+
+    // lock it to the correct auto height (prevents any tiny jump)
+    const body = activeItem.querySelector(".acc-body");
+    const h = body.scrollHeight;
+    gsap.set(body, { height: h, opacity: 1 });
+    // then allow future opens to animate to auto
+    requestAnimationFrame(() => gsap.set(body, { height: "auto" }));
+  }
+</script>
+
+  <!-- Products Placeholder -->
+<div class="footer">
+  <div class="footer-container">
+    <div class="footer-header">
+      <h2 class="chat-link"><a href="/inquiry.html" class="footer-link">Let's chat. →</a></h2>
+      <p>Branding and website creation.</p>
+      <p>Copyright © 2025</p>
+    </div>
+  </div>
+</div>
+
+
+
 
 
 <script src="app.js"></script>
