--- a/services.html
+++ b/services.html
@@ -519,7 +519,11 @@
   <!-- ✅ FIXED GSAP / ScrollTrigger -->
   <script>
     gsap.registerPlugin(ScrollTrigger);
-
+    // ✅ avoids “refresh while scrolling” on mobile (address bar)
+    ScrollTrigger.config({
+      ignoreMobileResize: true,
+      autoRefreshEvents: "visibilitychange,DOMContentLoaded,load"
+    });
     // ✅ Critical mobile fix: prevents address-bar resize from shifting pin starts mid-scroll
     ScrollTrigger.config({ ignoreMobileResize: true });
 
@@ -601,6 +605,7 @@
             trigger: ".circle-section",
             start: "top top",
             end: "+=1000",
+            pinType: "fixed",
             scrub: true,
             invalidateOnRefresh: true,
             onUpdate: self => {
@@ -1183,12 +1188,10 @@
 }
 </style>
 <script>
-  // no need to registerPlugin() for basic tweens
+document.addEventListener("DOMContentLoaded", () => {
   const items = document.querySelectorAll("#designAccordion .acc-item");
-
   let activeItem = null;
 
-  // ---- setup: close all bodies first ----
   items.forEach((item) => {
     const body = item.querySelector(".acc-body");
     gsap.set(body, { height: 0, opacity: 0, overflow: "hidden" });
@@ -1196,7 +1199,6 @@
     item.setAttribute("aria-expanded", "false");
   });
 
-  // ---- helpers ----
   function openItem(item, { instant = false } = {}) {
     const body = item.querySelector(".acc-body");
 
@@ -1205,12 +1207,14 @@
 
     gsap.killTweensOf(body);
 
-    // smoother feel: slightly longer + softer ease
     gsap.to(body, {
       height: "auto",
       opacity: 1,
       duration: instant ? 0 : 0.6,
-      ease: "power4.out"
+      ease: "power4.out",
+      onComplete: () => {
+        if (window.ScrollTrigger) ScrollTrigger.refresh();
+      }
     });
   }
 
@@ -1226,11 +1230,13 @@
       height: 0,
       opacity: 0,
       duration: 0.45,
-      ease: "power4.inOut"
+      ease: "power4.inOut",
+      onComplete: () => {
+        if (window.ScrollTrigger) ScrollTrigger.refresh();
+      }
     });
   }
 
-  // ---- click behavior: open + close at the same time ----
   items.forEach((item) => {
     item.addEventListener("click", () => {
       if (item === activeItem) {
@@ -1239,26 +1245,25 @@
         return;
       }
 
-      // open new + close old simultaneously
       openItem(item);
       if (activeItem) closeItem(activeItem);
-
       activeItem = item;
     });
   });
 
-  // ---- first open by default (instant, no animation on load) ----
+  // First open by default
   if (items.length) {
     activeItem = items[0];
     openItem(activeItem, { instant: true });
 
-    // lock it to the correct auto height (prevents any tiny jump)
     const body = activeItem.querySelector(".acc-body");
     const h = body.scrollHeight;
     gsap.set(body, { height: h, opacity: 1 });
-    // then allow future opens to animate to auto
     requestAnimationFrame(() => gsap.set(body, { height: "auto" }));
+
+    if (window.ScrollTrigger) ScrollTrigger.refresh();
   }
+});
 </script>
 
   <!-- Products Placeholder -->
